--- a/PlanitarioServer/PlanitarioServer/PlanitarioServer.csproj
+++ b/PlanitarioServer/PlanitarioServer/PlanitarioServer.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
+    <Compile Include="Publisher.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Trap.cs" />
   </ItemGroup>
