На пути к победе(Создаю другие типы передаваемых пакетов и интегрирую чужёй код в свой)

--- a/PlanitarioServer/PlanitarioServer/PlanitarioServer.csproj
+++ b/PlanitarioServer/PlanitarioServer/PlanitarioServer.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Deceleration.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="GameConst.cs" />
     <Compile Include="Map.cs" />
