--- a/Planitar.io/Planitar.io/Planitar.io.csproj
+++ b/Planitar.io/Planitar.io/Planitar.io.csproj
@@ -47,17 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Canal.cs" />
+    <Compile Include="Deceleration.cs" />
+    <Compile Include="Food.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameConst.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="MyService.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
+    <Compile Include="Trap.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
